3-k8-setup-core/envoy-gateway/base/envoy-gateway.gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway
  annotations:
    gateway.networking.k8s.io/is-default-class: "true"
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
