3-k8-setup-core/envoy-gateway/base/envoy-gateway.gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  #namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy-gateway
  #addresses:
  #  - value: 192.168.1.XX # Your single MetalLB IP
  #    type: IPAddress
  listeners:
#    - name: https
#      protocol: HTTPS
#      port: 443
#      tls:
#        mode: Terminate   # This is the magic word for SSL termination
#        certificateRefs:
#          - name: homelab-cert
#     allowedRoutes:
#        namespaces:
#          from: All
    - name: http
      protocol: HTTP
      port: 80
      # Optional: Redirect all HTTP to HTTPS
      allowedRoutes:
        namespaces:
          from: All
